DigicielFull/force-app/main/default/objects/Pre_Sales_Request__c/Pre_Sales_Request__c.object-meta.xml
<CustomObject>
    <description>Pre Sales request</description>
    <label>Pre Sales Request</label>
    <nameField>
        <displayFormat>PSR-{000000000}</displayFormat>
        <label>Pre Sales Request</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pre Sales Requests</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>