DigicielFull/force-app/main/default/objects/Pre_Sales_Request__c/fields/Additional_Features_Required__c.field-meta.xml
<CustomField>
    <fullName>Additional_Features_Required__c</fullName>
    <inlineHelpText>Provide details of additional features the customer has requested</inlineHelpText>
    <label>Additional Features Required</label>
    <type>TextArea</type>
</CustomField>