DigicielFull/force-app/main/default/objects/Pre_Sales_Request__c/fields/Additional_Solutions__c.field-meta.xml
<CustomField>
    <fullName>Additional_Solutions__c</fullName>
    <label>Additional Solutions</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>3rd Party Installation (Once Of)</fullName>
            </value>
            <value>
                <fullName>3rd Party Maintenance (recurring)</fullName>
            </value>
            <value>
                <fullName>Advanced Networking</fullName>
            </value>
            <value>
                <fullName>Audio Conferencing</fullName>
            </value>
            <value>
                <fullName>Avaya Aura</fullName>
            </value>
            <value>
                <fullName>Avaya IP Office</fullName>
            </value>
            <value>
                <fullName>Broadsoft</fullName>
            </value>
            <value>
                <fullName>Business WiMax</fullName>
            </value>
            <value>
                <fullName>CCTV</fullName>
            </value>
            <value>
                <fullName>Cisco Network Switches</fullName>
            </value>
            <value>
                <fullName>Cisco PBX</fullName>
            </value>
            <value>
                <fullName>Cisco SmartNet</fullName>
            </value>
            <value>
                <fullName>Cloud - Backup - high end</fullName>
            </value>
            <value>
                <fullName>Cloud Back Up Low End</fullName>
            </value>
            <value>
                <fullName>Cloud DaaS</fullName>
            </value>
            <value>
                <fullName>Cloud Disaster Recovery</fullName>
            </value>
            <value>
                <fullName>Cloud DRaaS</fullName>
            </value>
            <value>
                <fullName>Cloud Hosted Exchange</fullName>
            </value>
            <value>
                <fullName>Cloud - IaaS</fullName>
            </value>
            <value>
                <fullName>Cloud - LoB hosting</fullName>
            </value>
            <value>
                <fullName>Cloud MDM</fullName>
            </value>
            <value>
                <fullName>Cloud - NFV</fullName>
            </value>
            <value>
                <fullName>Cloud - PaaS</fullName>
            </value>
            <value>
                <fullName>Cloud - Private Cloud</fullName>
            </value>
            <value>
                <fullName>Cloud - Security</fullName>
            </value>
            <value>
                <fullName>Cloud Solution</fullName>
            </value>
            <value>
                <fullName>Cloud - Storage - High end</fullName>
            </value>
            <value>
                <fullName>Cloud - Storage- low end</fullName>
            </value>
            <value>
                <fullName>Cloud Telephony</fullName>
            </value>
            <value>
                <fullName>Co-Location</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>