DigicielFull/force-app/main/default/objects/Pre_Sales_Request__c/fields/Administrative_User_Quanitity__c.field-meta.xml
<CustomField>
    <fullName>Administrative_User_Quanitity__c</fullName>
    <label>Administrative User Quanitity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>