DigicielFull/force-app/main/default/objects/Pre_Sales_Request__c/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <formula>Completed_Date__c  - Requested_Date__c</formula>
    <label>Age</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>