DigicielFull/force-app/main/default/objects/Pre_Sales_Request__c/fields/Are_there_Tele_Remote_Workers_Current__c.field-meta.xml
<CustomField>
    <fullName>Are_there_Tele_Remote_Workers_Current__c</fullName>
    <inlineHelpText>Confirm if there are Teleworkers/Remote Workers currently in place</inlineHelpText>
    <label>Are there Tele/Remote Workers Current</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>