DigicielFull/force-app/main/default/objects/Pre_Sales_Request__c/fields/Asleep_PSR__c.field-meta.xml
<CustomField>
    <fullName>Asleep_PSR__c</fullName>
    <description>If a PSR is not complete and was not modified in the last 7 days : this checkbox is checked</description>
    <formula>IF(
				NOT(ISPICKVAL(Status__c , &quot;Complete&quot;))   &amp;&amp; NOT(ISPICKVAL(Status__c , &quot;Cancelled&quot;)) &amp;&amp;   TODAY() -  DATEVALUE(LastModifiedDate) &gt; 7, true, false
				)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Automatically checked if the PSR is not complete and has not been edited for the past 7 days.</inlineHelpText>
    <label>Asleep PSR</label>
    <type>Checkbox</type>
</CustomField>