DigicielFull/force-app/main/default/objects/Pre_Sales_Request__c/fields/Average_Mailbox_Size_Per_User__c.field-meta.xml
<CustomField>
    <fullName>Average_Mailbox_Size_Per_User__c</fullName>
    <label>Average Mailbox Size Per User</label>
    <length>255</length>
    <type>Text</type>
</CustomField>