DigicielFull/force-app/main/default/objects/Pre_Sales_Request__c/fields/Basic_Quote__c.field-meta.xml
<CustomField>
    <fullName>Basic_Quote__c</fullName>
    <label>Basic Quote</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>