DigicielFull/force-app/main/default/objects/Pre_Sales_Request__c/fields/Call_Accounting_Software_required__c.field-meta.xml
<CustomField>
    <fullName>Call_Accounting_Software_required__c</fullName>
    <label>Call Accounting Software required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>