DigicielFull/force-app/main/default/objects/Pre_Sales_Request__c/fields/ComplexityReason__c.field-meta.xml
<CustomField>
    <fullName>ComplexityReason__c</fullName>
    <label>Complexity Reason</label>
    <type>TextArea</type>
</CustomField>