DigicielFull/force-app/main/default/objects/Pre_Sales_Request__c/fields/Contract_Term__c.field-meta.xml
<CustomField>
    <fullName>Contract_Term__c</fullName>
    <inlineHelpText>What is the total duration of the Contract?

1 Year = 12

2 Years = 24

3 Years = 36

4 Years = 48

5 Years = 60</inlineHelpText>
    <label>Contract Term</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>