DigicielFull/force-app/main/default/objects/Pre_Sales_Request__c/fields/Core_Switch_Feature_Req__c.field-meta.xml
<CustomField>
    <fullName>Core_Switch_Feature_Req__c</fullName>
    <inlineHelpText>What features are required for the Core switch</inlineHelpText>
    <label>Core Switch Feature Req</label>
    <type>TextArea</type>
</CustomField>