DigicielFull/force-app/main/default/objects/Pre_Sales_Request__c/fields/Current_Connectivity__c.field-meta.xml
<CustomField>
    <fullName>Current_Connectivity__c</fullName>
    <description>Used in Digicel Cloud Hosted Exchange Pre Sales Worksheet</description>
    <inlineHelpText>Define Type i.e T1, DSL</inlineHelpText>
    <label>Current Connectivity</label>
    <type>TextArea</type>
</CustomField>