DigicielFull/force-app/main/default/objects/Pre_Sales_Request__c/fields/Current_System_Limitations__c.field-meta.xml
<CustomField>
    <fullName>Current_System_Limitations__c</fullName>
    <inlineHelpText>Give details of the current system limitations</inlineHelpText>
    <label>Current System Limitations</label>
    <type>TextArea</type>
</CustomField>