DigicielFull/force-app/main/default/objects/Pre_Sales_Request__c/fields/Date_PS_Removed_from_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Date_PS_Removed_from_Vendor__c</fullName>
    <description>tracks the date a pre sales request is removed from status &quot;sent to Vendor&quot;</description>
    <label>Date PS Removed from Vendor</label>
    <type>Date</type>
</CustomField>