DigicielFull/force-app/main/default/objects/Pre_Sales_Request__c/fields/Date_PS_Updated_to_Contractor__c.field-meta.xml
<CustomField>
    <fullName>Date_PS_Updated_to_Contractor__c</fullName>
    <description>Tracks the date a pre sales request is updated to &quot;Sent to Contractor&quot;</description>
    <label>Date PS Updated to Contractor</label>
    <type>Date</type>
</CustomField>