DigicielFull/force-app/main/default/objects/Pre_Sales_Request__c/fields/Date_PS_Updated_to_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Date_PS_Updated_to_Vendor__c</fullName>
    <description>tracks the date the status is update to &quot;Sent to Vendor&quot;</description>
    <label>Date PS Updated to Vendor</label>
    <type>Date</type>
</CustomField>