DigicielFull/force-app/main/default/objects/Pre_Sales_Request__c/fields/Date_Removed_from_On_Hold_More_Info_Rq__c.field-meta.xml
<CustomField>
    <fullName>Date_Removed_from_On_Hold_More_Info_Rq__c</fullName>
    <description>tracks the date the status was removed from On hold more info required</description>
    <label>Date Removed from On Hold - More Info Rq</label>
    <type>Date</type>
</CustomField>