DigicielFull/force-app/main/default/objects/Pre_Sales_Request__c/fields/Date_Returned_to_PreSales__c.field-meta.xml
<CustomField>
    <fullName>Date_Returned_to_PreSales__c</fullName>
    <description>Captures the date returned to PreSales</description>
    <label>Date Returned to PreSales</label>
    <type>Date</type>
</CustomField>