DigicielFull/force-app/main/default/objects/Pre_Sales_Request__c/fields/Date_Status_Updated_to_On_Hold_Mr_Inf__c.field-meta.xml
<CustomField>
    <fullName>Date_Status_Updated_to_On_Hold_Mr_Inf__c</fullName>
    <description>tracks the date the status was updated to On Hold - More Info Required</description>
    <label>Date Status Updated to On Hold Mr Inf</label>
    <type>Date</type>
</CustomField>