DigicielFull/force-app/main/default/objects/Pre_Sales_Request__c/fields/Digicel_Country__c.field-meta.xml
<CustomField>
    <fullName>Digicel_Country__c</fullName>
    <formula>Text(CreatedBy.Digicel_Country__c)</formula>
    <label>Digicel Country</label>
    <type>Text</type>
</CustomField>