DigicielFull/force-app/main/default/objects/Pre_Sales_Request__c/fields/Does_Client_Use_Blackberry_Devices__c.field-meta.xml
<CustomField>
    <fullName>Does_Client_Use_Blackberry_Devices__c</fullName>
    <label>Does Client Use Blackberry Devices</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>