DigicielFull/force-app/main/default/objects/Pre_Sales_Request__c/fields/Does_Client_use_Public_Folders__c.field-meta.xml
<CustomField>
    <fullName>Does_Client_use_Public_Folders__c</fullName>
    <description>Used in Digicel Cloud Hosted Exchange Pre Sales Worksheet</description>
    <label>Does Client use Public Folders</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>