DigicielFull/force-app/main/default/objects/Pre_Sales_Request__c/fields/Estimated_Growth__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Growth__c</fullName>
    <inlineHelpText>Detail expected growth</inlineHelpText>
    <label>Estimated Growth</label>
    <type>TextArea</type>
</CustomField>