DigicielFull/force-app/main/default/objects/Pre_Sales_Request__c/fields/Guest_Room_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Guest_Room_Quantity__c</fullName>
    <label>Guest Room Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>