DigicielFull/force-app/main/default/objects/Pre_Sales_Request__c/fields/HLD_Document__c.field-meta.xml
<CustomField>
    <fullName>HLD_Document__c</fullName>
    <label>HLD Document</label>
    <type>Url</type>
</CustomField>