DigicielFull/force-app/main/default/objects/Pre_Sales_Request__c/fields/How_much_data_stored_for_email__c.field-meta.xml
<CustomField>
    <fullName>How_much_data_stored_for_email__c</fullName>
    <description>Used in Digicel Cloud Hosted Exchange Pre Sales Worksheet</description>
    <label>How much data stored for email</label>
    <type>TextArea</type>
</CustomField>