DigicielFull/force-app/main/default/objects/Pre_Sales_Request__c/fields/Integration_between_email_and_Business__c.field-meta.xml
<CustomField>
    <fullName>Integration_between_email_and_Business__c</fullName>
    <description>Used in Digicel Cloud Hosted Exchange Pre Sales Worksheet</description>
    <label>Integration email and Business</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>