DigicielFull/force-app/main/default/objects/Pre_Sales_Request__c/fields/Is_this_opportunity_registered__c.field-meta.xml
<CustomField>
    <fullName>Is_this_opportunity_registered__c</fullName>
    <label>Is this opportunity registered?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>