DigicielFull/force-app/main/default/objects/Pre_Sales_Request__c/fields/LAN_Devices_in_Place__c.field-meta.xml
<CustomField>
    <fullName>LAN_Devices_in_Place__c</fullName>
    <inlineHelpText>Provide details of the current LAN devices if place, quantities and features supported (i.e. PoE, QoS etc) by location</inlineHelpText>
    <label>LAN Devices in Place</label>
    <type>TextArea</type>
</CustomField>