DigicielFull/force-app/main/default/objects/Pre_Sales_Request__c/fields/Mailbox_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Mailbox_Quantity__c</fullName>
    <label>Mailbox Quantity</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>