DigicielFull/force-app/main/default/objects/Pre_Sales_Request__c/fields/Maximum_of_Users__c.field-meta.xml
<CustomField>
    <fullName>Maximum_of_Users__c</fullName>
    <inlineHelpText>Number of End Users connecting to WiFi</inlineHelpText>
    <label>Maximum # of Users</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>