DigicielFull/force-app/main/default/objects/Pre_Sales_Request__c/fields/New_Routers_Req__c.field-meta.xml
<CustomField>
    <fullName>New_Routers_Req__c</fullName>
    <label>New Routers Req</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>