DigicielFull/force-app/main/default/objects/Pre_Sales_Request__c/fields/No_of_Blackberry_Licences__c.field-meta.xml
<CustomField>
    <fullName>No_of_Blackberry_Licences__c</fullName>
    <label>No of Blackberry Licences</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>