DigicielFull/force-app/main/default/objects/Pre_Sales_Request__c/fields/No_of_Days_With_Contractor__c.field-meta.xml
<CustomField>
    <fullName>No_of_Days_With_Contractor__c</fullName>
    <description>Tracks number of days with Contractor based on working days</description>
    <formula>(Date_PS_Removed_from_Contractor__c - Date_PS_Updated_to_Contractor__c ) - 
( FLOOR ( ( ( (Date_PS_Removed_from_Contractor__c) - Date_PS_Updated_to_Contractor__c ) / 7 ) ) * 2 ) + 
CASE(MOD ( Date_PS_Updated_to_Contractor__c - DATE( 1900,1,6 ),7), 
0,CASE( MOD ((Date_PS_Removed_from_Contractor__c) - DATE( 1900,1,6 ),7),0,1,2 ), 
1,CASE( MOD ((Date_PS_Removed_from_Contractor__c) - DATE( 1900,1,6 ),7),0,2,1 ), 
IF(MOD( Date_PS_Updated_to_Contractor__c - DATE( 1900,1,6 ),7) - MOD((Date_PS_Removed_from_Contractor__c) - DATE( 1900,1,6 ),7) &lt;= 0 ,0, 
IF(MOD((Date_PS_Removed_from_Contractor__c) - DATE( 1900,1,6 ),7) = 0,1,-2 ) ))</formula>
    <inlineHelpText>Tracks number of days with Contractor based on working days</inlineHelpText>
    <label>No of Days With Contractor</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>