DigicielFull/force-app/main/default/objects/Pre_Sales_Request__c/fields/No_of_Floors__c.field-meta.xml
<CustomField>
    <fullName>No_of_Floors__c</fullName>
    <description>Number of floors at customer sites</description>
    <label>No of Floors</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>