DigicielFull/force-app/main/default/objects/Pre_Sales_Request__c/fields/No_of_Users_per_Floor__c.field-meta.xml
<CustomField>
    <fullName>No_of_Users_per_Floor__c</fullName>
    <description>No of users per floor</description>
    <label>No of Users per Floor</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>