DigicielFull/force-app/main/default/objects/Pre_Sales_Request__c/fields/No_Of_Users_Requiring_Email__c.field-meta.xml
<CustomField>
    <fullName>No_Of_Users_Requiring_Email__c</fullName>
    <description>Used in Digicel Cloud Hosted Exchange Pre Sales Worksheet</description>
    <label>No Of Users Requiring Email</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>