DigicielFull/force-app/main/default/objects/Pre_Sales_Request__c/fields/Number_of_PSTN_lines__c.field-meta.xml
<CustomField>
    <fullName>Number_of_PSTN_lines__c</fullName>
    <label>Number of PSTN lines</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>