DigicielFull/force-app/main/default/objects/Pre_Sales_Request__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relationship to Opportunity</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Pre Sales Requests</relationshipLabel>
    <relationshipName>ICT_Customer_Questionnaires</relationshipName>
    <type>Lookup</type>
</CustomField>