DigicielFull/force-app/main/default/objects/Pre_Sales_Request__c/fields/Outlook_Clients_on_Devices__c.field-meta.xml
<CustomField>
    <fullName>Outlook_Clients_on_Devices__c</fullName>
    <description>Used in Digicel Cloud Hosted Exchange Pre Sales Worksheet</description>
    <inlineHelpText>i.e. desktops, laptops etc</inlineHelpText>
    <label>Outlook Clients on Devices</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>