DigicielFull/force-app/main/default/objects/Pre_Sales_Request__c/fields/Parish_Region_Department__c.field-meta.xml
<CustomField>
    <fullName>Parish_Region_Department__c</fullName>
    <formula>TEXT (Opportunity__r.Parish__c)</formula>
    <label>Parish / Region / Department</label>
    <type>Text</type>
</CustomField>