DigicielFull/force-app/main/default/objects/Pre_Sales_Request__c/fields/PMS_System__c.field-meta.xml
<CustomField>
    <fullName>PMS_System__c</fullName>
    <inlineHelpText>(Manufacturer)</inlineHelpText>
    <label>PMS System</label>
    <length>100</length>
    <type>Text</type>
</CustomField>