DigicielFull/force-app/main/default/objects/Pre_Sales_Request__c/fields/PoE_Switches__c.field-meta.xml
<CustomField>
    <fullName>PoE_Switches__c</fullName>
    <description>Are PoE switches required</description>
    <inlineHelpText>Are PoE switches required</inlineHelpText>
    <label>PoE Switches</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>