DigicielFull/force-app/main/default/objects/Pre_Sales_Request__c/fields/Pre_Sales_On_Hold_Details__c.field-meta.xml
<CustomField>
    <fullName>Pre_Sales_On_Hold_Details__c</fullName>
    <label>Pre Sales On Hold Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>