DigicielFull/force-app/main/default/objects/Pre_Sales_Request__c/fields/Pre_Sales_Request_Key__c.field-meta.xml
<CustomField>
    <fullName>Pre_Sales_Request_Key__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pre Sales Request Key</label>
    <type>Text</type>
</CustomField>